airflow/logs/dag_id=work_task/run_id=manual__2024-11-22T15:39:56.033494+00:00/task_id=save_to_postgres/attempt=1.log
[2024-11-22T15:40:00.502+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: work_task.save_to_postgres manual__2024-11-22T15:39:56.033494+00:00 [queued]>
[2024-11-22T15:40:00.514+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: work_task.save_to_postgres manual__2024-11-22T15:39:56.033494+00:00 [queued]>
[2024-11-22T15:40:00.515+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 6
[2024-11-22T15:40:00.533+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): save_to_postgres> on 2024-11-22 15:39:56.033494+00:00
[2024-11-22T15:40:00.538+0000] {standard_task_runner.py:60} INFO - Started process 369 to run task
[2024-11-22T15:40:00.543+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'work_task', 'save_to_postgres', 'manual__2024-11-22T15:39:56.033494+00:00', '--job-id', '8', '--raw', '--subdir', 'DAGS_FOLDER/task.py', '--cfg-path', '/tmp/tmp0s0h0x46']
[2024-11-22T15:40:00.546+0000] {standard_task_runner.py:88} INFO - Job 8: Subtask save_to_postgres
[2024-11-22T15:40:00.611+0000] {task_command.py:423} INFO - Running <TaskInstance: work_task.save_to_postgres manual__2024-11-22T15:39:56.033494+00:00 [running]> on host 7003e752bc1d
[2024-11-22T15:40:00.713+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='work_task' AIRFLOW_CTX_TASK_ID='save_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-11-22T15:39:56.033494+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-11-22T15:39:56.033494+00:00'
[2024-11-22T15:40:00.728+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-11-22T15:40:00.743+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/task.py", line 66, in insert_data_to_postgres
    cursor.execute(
psycopg2.errors.SyntaxError: syntax error at or near "date"
LINE 4:                     ON CONFLICT date DO UPDATE
                                        ^

[2024-11-22T15:40:00.759+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=work_task, task_id=save_to_postgres, execution_date=20241122T153956, start_date=20241122T154000, end_date=20241122T154000
[2024-11-22T15:40:00.778+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8 for task save_to_postgres (syntax error at or near "date"
LINE 4:                     ON CONFLICT date DO UPDATE
                                        ^
; 369)
[2024-11-22T15:40:00.809+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-11-22T15:40:00.831+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
